[package]
name = "rust-ether-wallet-checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wallet-gen = "0.4.1"
http = "0.2.8"
web3 = "0.18.0"
tokio = { version= "1", features = ["full"] }
secp256k1 = "0.25.0"
wagyu-model = "0.6.3"
hex = "0.4.3"
